--- a/src-frontend/src/app/content/content.component.html
+++ b/src-frontend/src/app/content/content.component.html
@@ -3,27 +3,26 @@
     <div class="content">
         <section class="first">
             <div class="container">
-                <div class="row">
+                <div class="row justify-content-center align-items-center">
                     <div class="col-lg-6">
                         <h2>Un espacio de trabajo solo para ti</h2>
                         <p>Sientete libre de guardar todas tus ideas en un espacio centralizado, donde podrás guardar todas esas ideas locas que no sabes donde dejar</p>
                     </div>
-                    <div class="col-lg-6" style="text-align: center;">
-                        <img src="https://cdn-icons-png.flaticon.com/512/6681/6681441.png" class="img-fluid"
-                            alt="Explora tus Intereses" class="notas">
+                    <div class="col-lg-3 text-center">
+                        <img src="https://cdn-icons-png.flaticon.com/512/6681/6681441.png" class="img-fluid notas" alt="Explora tus Intereses">
                     </div>
                 </div>
             </div>
         </section>
         <section class="first">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6" style="text-align: center;">
-                        <img src="../../../assets/notas.png" class="img-fluid" alt="Construye tu Perfil" class="grupo">
-                    </div>
+                <div class="row justify-content-center align-items-center">
                     <div class="col-lg-6">
-                        <h2>Colabora en grupo para realizar</h2>
+                        <h2>Colabora en grupo para realizar proyectos</h2>
                         <p>Unete a otros usuarios para llevar a cabo metas comunes o hacer realidad vuestras grandes ideas de manera organizada</p>
+                    </div>
+                    <div class="col-lg-3 text-center">
+                        <img src="https://static.vecteezy.com/system/resources/previews/018/923/806/non_2x/business-people-teamwork-png.png" class="img-fluid grupo" alt="Construye tu Perfil">
                     </div>
                 </div>
             </div>
