--- a/src-frontend/src/app/admin-dash/admin-dash-list-notes/admin-dash-list-notes.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-list-notes/admin-dash-list-notes.component.html
@@ -1,6 +1,6 @@
-<div class="adminDash">
+<div class="adminDash d-flex">
   <app-admin-sidebar></app-admin-sidebar>
-  <div>
+  <div class="main-content flex-grow-1">
     <section>
       <div class="align-items-center">
         <div class="justify-content-center">
@@ -10,7 +10,7 @@
           </div>
           <div class="table-responsive bg-white" data-mdb-perfect-scrollbar="true"
             style="position: relative; height: 70vh;">
-            <table class="table .centered-table">
+            <table class="table centered-table">
               <thead>
                 <tr>
                   <th></th>
@@ -29,7 +29,7 @@
                     </div>
                   <td>{{ note.id }}</td>
                   <td>{{ note.titulo }}</td>
-                  <td>{{ note.contenido }}</td>
+                  <td>{{ truncateText(note.contenido, 30) }}</td>
                   <td>{{ note.usuario.email }}</td>
                   <td>
                     <button class="btn btn-primary" [routerLink]="['/adminDash/notas', note.id]"
@@ -45,51 +45,47 @@
       </div>
     </section>
   </div>
-
-  <div id="id01" class="modal">
-    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
-    <form class="modal-content">
-      <div class="container">
-        <h1>Borrando Nota {{ notaBorradoID }} - {{ notaBorradoTitulo }}</h1>
-        <p>¿Estas seguro de borrar esta nota?</p>
-
-        <div class="clearfix">
-          <button type="button" onclick="document.getElementById('id01').style.display='none'"
-            class="cancelbtn">Cancelar</button>
-          <button type="button" (click)="ocultarElemento('id01'); borrarNota(notaBorradoID)"
-            class="deletebtn">Borrar</button>
-        </div>
-      </div>
-    </form>
-  </div>
-
-  <div id="myModal" class="modal" [ngClass]="{'show': isModalOpen}">
-    <div class="modal-content">
-      <span class="close" (click)="closeModal()">&times;</span>
+</div>
+<div id="id01" class="modal">
+  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
+  <form class="modal-content">
+    <div class="container">
       <h1>Borrando Nota {{ notaBorradoID }} - {{ notaBorradoTitulo }}</h1>
-      <p>¿Estás seguro que quieres borrar?</p>
-      <div class="buttons">
-        <button class="btn confirm" (click)="confirmAction(); borrarNota(notaBorradoID)">Confirmar</button>
-        <button class="btn cancel" (click)="closeModal()">Cancelar</button>
+      <p>¿Estas seguro de borrar esta nota?</p>
+
+      <div class="clearfix">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'"
+          class="cancelbtn">Cancelar</button>
+        <button type="button" (click)="ocultarElemento('id01'); borrarNota(notaBorradoID)"
+          class="deletebtn">Borrar</button>
       </div>
     </div>
-  </div>
+  </form>
+</div>
 
-  <div id="myModal1" class="modal" [ngClass]="{'show': isModalCerrar}">
-    <div class="modal-content">
-      <span class="close" (click)="closeModalCerrar()">&times;</span>
-      <div class="check-animation">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
-          <circle cx="26" cy="26" r="25" fill="none" />
-          <path fill="none" stroke="#ffffff" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"
-            d="M14 27l5 5 14-14" class="check-svg" />
-        </svg>
-      </div>
-      <p>Se ha realizado la acción satisfactorimente</p>
-      <button class="btnCerrar" (click)="closeModalCerrar()">Cerrar</button>
+<div id="myModal" class="modal" [ngClass]="{'show': isModalOpen}">
+  <div class="modal-content">
+    <span class="close" (click)="closeModal()">&times;</span>
+    <h1>Borrando Nota {{ notaBorradoID }} - {{ notaBorradoTitulo }}</h1>
+    <p>¿Estás seguro que quieres borrar?</p>
+    <div class="buttons">
+      <button class="btn confirm" (click)="confirmAction(); borrarNota(notaBorradoID)">Confirmar</button>
+      <button class="btn cancel" (click)="closeModal()">Cancelar</button>
     </div>
   </div>
+</div>
 
-
-
+<div id="myModal1" class="modal" [ngClass]="{'show': isModalCerrar}">
+  <div class="modal-content">
+    <span class="close" (click)="closeModalCerrar()">&times;</span>
+    <div class="check-animation">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+        <circle cx="26" cy="26" r="25" fill="none" />
+        <path fill="none" stroke="#ffffff" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"
+          d="M14 27l5 5 14-14" class="check-svg" />
+      </svg>
+    </div>
+    <p>Se ha realizado la acción satisfactorimente</p>
+    <button class="btnCerrar" (click)="closeModalCerrar()">Cerrar</button>
+  </div>
 </div>
