--- a/src-frontend/src/app/components/user-sidebar/user-sidebar.component.html
+++ b/src-frontend/src/app/components/user-sidebar/user-sidebar.component.html
@@ -1,41 +1,38 @@
-<div class="barra-lateral-admin">
-    <div class="divider"></div>
-    <div class="project-sections">
-        <div class="nav-link project">
-            <img src="https://cdn-icons-png.flaticon.com/512/47/47774.png" alt=""
-                style="width: 30px; margin-right: 5px;">
-            <div class="title-description">
-                <div class="text-wrapper">Panel de trabajo</div>
-                <div class="div">Aquí puedes ver todas tus notas y proyectos</div>
-            </div>
-        </div>
-        <mat-accordion>
-            <mat-expansion-panel  (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-                <mat-expansion-panel-header>
-                  <mat-panel-title>
-                    Notas
-                  </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p [routerLink]="['/notas']" routerLinkActive="active">Todas las notas</p>
-                <p *ngFor="let note of notes" [routerLink]="['/notas', note.id]"
-                routerLinkActive="active">
-                    {{note.titulo}}
-                </p>
-                <p [routerLink]="['/crearNota']" routerLinkActive="active">Nueva Nota +</p>
-              </mat-expansion-panel>
-            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        Proyectos
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <p [routerLink]="['/proyectos']" routerLinkActive="active">Todas los proyectos</p>
-                <p *ngFor="let proyecto of proyectos" [routerLink]="['/proyectos', proyecto.id]"
-                routerLinkActive="active">
-                    {{proyecto.nombre}}
-                </p>
-                <p  [routerLink]="['/crearProyecto']" routerLinkActive="active">Nuevo Proyecto +</p>
-            </mat-expansion-panel>
-        </mat-accordion>
+<div class="barra-lateral-admin" [class.collapsed]="isCollapsed">
+    <div class="toggle-button" (click)="toggleSidebar()">
+      <mat-icon *ngIf="isCollapsed" class="cerrado">chevron_right</mat-icon>
+      <mat-icon *ngIf="!isCollapsed" class="abierto">chevron_left</mat-icon>
     </div>
-</div>
+    <div class="project-sections" *ngIf="!isCollapsed">
+      <div class="nav-link project">
+        <img src="https://cdn-icons-png.flaticon.com/512/47/47774.png" alt="" style="width: 30px; margin-right: 5px;">
+        <div class="title-description">
+          <div class="text-wrapper">Panel de trabajo</div>
+          <div class="div">Aquí puedes ver todas tus notas y proyectos</div>
+        </div>
+      </div>
+      <mat-accordion>
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>Notas</mat-panel-title>
+          </mat-expansion-panel-header>
+          <p [routerLink]="['/notas']" routerLinkActive="active">Todas las notas</p>
+          <p *ngFor="let note of notes" [routerLink]="['/notas', note.id]" routerLinkActive="active">
+            {{note.titulo}}
+          </p>
+          <p [routerLink]="['/crearNota']" routerLinkActive="active">Nueva Nota +</p>
+        </mat-expansion-panel>
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>Proyectos</mat-panel-title>
+          </mat-expansion-panel-header>
+          <p [routerLink]="['/proyectos']" routerLinkActive="active">Todos los proyectos</p>
+          <p *ngFor="let proyecto of proyectos" [routerLink]="['/proyectos', proyecto.id]" routerLinkActive="active">
+            {{proyecto.nombre}}
+          </p>
+          <p [routerLink]="['/crearProyecto']" routerLinkActive="active">Nuevo Proyecto +</p>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+  </div>
+  
