--- a/src-frontend/src/app/content/content.component.css
+++ b/src-frontend/src/app/content/content.component.css
@@ -1,18 +1,69 @@
-.content {
-    margin: 100px;
-    display: flex;
-    justify-content: center;
-}
-
-.notas, .grupo{
-    width: 200px;
-}
-
-.titulo{
+.titulo {
     text-align: center;
-    margin-top: 100px;
+    margin: 20px 0;
 }
 
-.col-lg-6{
+.content {
+    padding: 20px 0;
+}
+
+.first {
+    margin-bottom: 40px;
+}
+
+.first h2 {
+    font-size: 2rem;
     margin-bottom: 20px;
+}
+
+.first p {
+    font-size: 1.2rem;
+}
+
+.img-fluid {
+    width: 200px;
+    height: auto;
+}
+
+/* Responsive Styles */
+@media (max-width: 991px) {
+    .first h2 {
+        font-size: 1.75rem;
+        text-align: center;
+    }
+
+    .first p {
+        font-size: 1rem;
+        text-align: center;
+        padding: 0 10px;
+    }
+
+    .first .col-lg-6 {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .first .col-lg-6.order-lg-2 {
+        order: 1;
+    }
+
+    .first .col-lg-6.order-lg-1 {
+        order: 2;
+    }
+
+    .first .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 480px) {
+    .first h2 {
+        font-size: 1.5rem;
+    }
+
+    .first p {
+        font-size: 0.9rem;
+    }
 }
