--- a/src-frontend/src/app/layout/footer/footer.component.css
+++ b/src-frontend/src/app/layout/footer/footer.component.css
@@ -1,56 +1,72 @@
 footer {
-  padding-top:50px;
-  padding-bottom:20px;
-  color:black;
-  background-color:white;
+  padding-top: 50px;
+  padding-bottom: 20px;
+  color: black;
+  background-color: white;
   border-top: 1px solid black;
 }
 
 footer h3 {
-  margin-top:0;
-  margin-bottom:12px;
-  font-size:16px;
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-size: 16px;
 }
 
 footer ul {
-  padding:0;
-  list-style:none;
-  line-height:1.6;
-  font-size:14px;
-  margin-bottom:0;
+  padding: 0;
+  list-style: none;
+  line-height: 1.6;
+  font-size: 14px;
+  margin-bottom: 0;
 }
 
 footer ul a {
-  color:inherit;
-  text-decoration:none;
+  color: inherit;
+  text-decoration: none;
 }
 
 footer ul a:hover {
-  opacity:0.8;
+  opacity: 0.8;
 }
 
 footer .item.text {
-  margin-bottom:36px;
-}
-
-@media (max-width:767px) {
-  .footer .item.text {
-    margin-bottom:0;
-  }
+  margin-bottom: 36px;
 }
 
 footer .item.text p {
-  opacity:0.6;
-  margin-bottom:0;
+  opacity: 0.6;
+  margin-bottom: 0;
 }
 
 footer .item.social {
-  text-align:center;
+  text-align: center;
 }
 
 footer .copyright {
-  text-align:center;
-  padding-top:24px;
-  font-size:13px;
-  margin-bottom:0;
+  text-align: center;
+  padding-top: 24px;
+  font-size: 13px;
+  margin-bottom: 0;
+}
+
+@media (max-width: 767px) {
+  footer .item.text {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  footer h3 {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  footer .row > div {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+  footer .item ul {
+    text-align: center;
+  }
+  footer .item.social {
+    margin-bottom: 20px;
+  }
 }
