--- a/src-frontend/src/app/user-dash/user-dash.component.html
+++ b/src-frontend/src/app/user-dash/user-dash.component.html
@@ -1,21 +1,23 @@
-<div class="adminDash">
+<div class="adminDash d-flex">
   <app-user-sidebar></app-user-sidebar>
-  <div class="container-fluid header-bg">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="mt-5">¡Bienvenido a la página de inicio de Usuario</h1>
-        <br>
-        <p class="lead">Gestiona tus notas y proyectos</p>
-        <p>Desde aquí, puedes:</p>
-        <br>
-        <ul class="list-unstyled">
-          <li>Ver todas tus anotaciones, además de crear o eliminar las que ya no uses</li>
+  <div class="main-content flex-grow-1">
+    <section>
+      <div class="align-items-center">
+        <div class="justify-content-center text-center">
+          <h1 class="mt-5">¡Bienvenido a la página de inicio de Usuario!</h1>
           <br>
-          <li>Crear todos los proyectos que necesites</li>
+          <p class="lead">Gestiona tus notas y proyectos</p>
+          <p>Desde aquí, puedes:</p>
           <br>
-          <li>Ver todos los proyectos en los que eres participante y colaborar en ellos</li>
-        </ul>
+          <ul class="list-unstyled">
+            <li>Ver todas tus anotaciones, además de crear o eliminar las que ya no uses</li>
+            <br>
+            <li>Crear todos los proyectos que necesites</li>
+            <br>
+            <li>Ver todos los proyectos en los que eres participante y colaborar en ellos</li>
+          </ul>
+        </div>
       </div>
-    </div>
+    </section>
   </div>
 </div>
