--- a/src-frontend/src/app/user-dash/user-notes/user-notes.component.html
+++ b/src-frontend/src/app/user-dash/user-notes/user-notes.component.html
@@ -1,15 +1,14 @@
-<div class="adminDash">
+<div class="adminDash d-flex">
   <app-user-sidebar></app-user-sidebar>
-  <div>
+  <div class="main-content flex-grow-1">
     <section>
       <div class="align-items-center">
         <div class="justify-content-center">
           <div class="d-flex justify-content-end mb-3" style="margin: 30px;">
             <button class="btn btn-success" [routerLink]="['/crearNota']" routerLinkActive="active">Crear Nota</button>
           </div>
-          <div class="table-responsive bg-white" data-mdb-perfect-scrollbar="true"
-            style="position: relative; height: 70vh;">
-            <table class="table .centered-table">
+          <div class="table-responsive bg-white" data-mdb-perfect-scrollbar="true" style="position: relative; height: 70vh;">
+            <table class="table centered-table">
               <thead>
                 <tr>
                   <th>#</th>
@@ -26,13 +25,11 @@
                       <img class="image" src="../../../assets/notas.png" />
                     </div>
                   <td>{{ note.titulo }}</td>
-                  <td>{{ note.contenido }}</td>
+                  <td>{{ truncateText(note.contenido, 30) }}</td>
                   <td>{{ note.usuario.email }}</td>
                   <td>
-                    <button class="btn btn-primary" [routerLink]="['/notas', note.id]"
-                    routerLinkActive="active">Modificar</button>
-                    <button mat-raised-button class="btn btn-danger"
-                    (click)="confirmarborrarNota(note.id, note.titulo)">Borrar</button>
+                    <button class="btn btn-primary" [routerLink]="['/notas', note.id]" routerLinkActive="active">Modificar</button>
+                    <button mat-raised-button class="btn btn-danger" (click)="confirmarborrarNota(note.id, note.titulo)">Borrar</button>
                   </td>
                 </tr>
               </tbody>
